# sport-adverse-events

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_config.json
assets/: 2023_01 bis 2023_06_Bericht AE Risikoregister_final.docx  vorlage.xlsx
data/: RegisterZurErfassung_DATA_LABELS_2024-01-11_1301.csv
data/_archive/: 2024-04-19_export.csv  RegisterZurErfassung_DATA_LABELS_2024-01-11_1301.csv  RegisterZurErfassung_DATA_LABELS_2024-05-13_1650.csv  RegisterZurErfassung_DATA_LABELS_2024-10-23_1005.csv  RegisterZurErfassung_DATA_LABELS_2025-01-13_1459.csv
data/codebooks/: codebook_columns.xlsx  codebook_values.xlsx  id.csv
data/in/: RegisterZurErfassung_DATA_2024-04-25_1121.csv  RegisterZurErfassung_DATA_LABELS_2024-04-26_1514.csv  RegisterZurErfassung_DATA_LABELS_2024-05-27_0911.csv  RegisterZurErfassung_DATA_LABELS_2024-08-01_0955.csv  RegisterZurErfassung_DATA_LABELS_2024-10-22_1600.csv  RegisterZurErfassung_DATA_LABELS_2025-02-14_0900.csv  RegisterZurErfassung_DATA_LABELS_2025-08-11_1552.csv  Register_fertig.xlsx  df_csv_cols.xlsx
docs/notebooks/: 2_analyze.md  3_description.md
docs/uml/: test.puml
src/: 1_create.ipynb  2_analyze.ipynb  3_description.ipynb  3_streamlit.ipynb  _convert_to_md.ipynb  convert_to_md.ipynb  main.ipynb  streamlit_app.py
src/docs/: 1_create.md  3_description.md
src/mod/: helper.py
