[project]
name = "sport-adverse-events"
version = "0.3.0"
description = "analysis of adverse events in sport"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "pip",
    "pandas",
    "numpy<2",
    "pandas-plots>=0.12.14",
    "connection-helper",
    "pygwalker",
    "kaleido<0.2.1",
    "streamlit",
    "openpyxl>=3.1.5",
    "odfpy>=1.4.1",
    "duckdb>=1.2.0",
    "jinja2==3.1.6",
]
